fix(layout): normalize layout main z-index
fix #253

--- a/style/layout.scss
+++ b/style/layout.scss
@@ -202,6 +202,8 @@ $layout: map.merge(
   }
 
   &__main {
+    position: relative;
+    z-index: 0;
     display: flex;
     flex-direction: column;
     width: 100%;
